# Rustaria_Prototype

./: .gitignore  LICENSE  README.md
rustaria/: Cargo.toml
rustaria/rustaria-core/: Cargo.toml
rustaria/rustaria-core/src/: block.rs  chunk.rs  lib.rs  mesh.rs  world.rs  world_manager.rs
rustaria/rustaria-core/src/blocks/: defaults.rs
rustaria/rustaria-game/: Cargo.toml
rustaria/rustaria-game/src/: camera.rs  debug.rs  frustum.rs  game_state.rs  gpu_mesh.rs  input.rs  main.rs  pipeline.rs  render.rs  renderer.rs  shader.wgsl  streaming.rs
